Routing in course project

--- a/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
+++ b/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
@@ -1,6 +1,10 @@
-<a href="javascript:;" class="list-group-item clearfix"
+<a
+style="cursor: pointer;"
+[routerLink]="[index]"
+routerLinkActive="active"
+ class="list-group-item clearfix"
 [ngStyle]="{borderColor: recipieItem.id !=0 && recipieItem.id === selected ? 'red' : 'black'}"
-(click)="onItemSelect()">
+>
     <div class="pull-left">
         <h4 class="list-group-item-heading">{{recipieItem.name}}</h4>
         <p class="list-group-item-text">{{recipieItem.description}}</p>
