--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -17,7 +17,7 @@
             </button>
             <ul class="dropdown-menu">
                 <li><a (click)="onAddToShoppingList()" style="cursor: pointer;">To Shopping list</a></li>
-                <li><a href="#">Edit Recipe</a></li>
+                <li><a (click)="onEditRecipe()" style="cursor: pointer;">Edit Recipe</a></li>
                 <li><a href="#">Delete Recipe</a></li>
             </ul>
         </div>
