--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-xs-12">
-        <button class="btn btn-success" (click)="addRecipe()">New Recipe</button>
+        <button class="btn btn-success" (click)="onNewRecipe()">New Recipe</button>
     </div>
     <div class="col-sm-5 form-group">
         <label for="name">Name</label>
@@ -22,8 +22,9 @@
     
     <div class="col-xs-12">
         <app-recipe-item 
-        *ngFor="let recipe of recipes"
+        *ngFor="let recipe of recipes; let i = index"
         [recipieItem]="recipe"
+        [index]="i"
         [name]="personName"
         (deleteItem)="OndeleteItem($event)"
         >
