--- a/src/app/recipes/recipes.component.html
+++ b/src/app/recipes/recipes.component.html
@@ -4,12 +4,15 @@
         ></app-recipe-list>
     </div>
     <div class="col-md-7">
-        <app-recipe-detail
+
+        <router-outlet></router-outlet>
+
+        <!-- <app-recipe-detail
         *ngIf="selectedrecipe; else infoText"
         [recipeDetail]="selectedrecipe"></app-recipe-detail>
         <ng-template #infoText>
             <p appBasicHighlighter>Please select a recipe</p>
             <p appBetterHighlight>Don't be late</p> 
-        </ng-template>
+        </ng-template> -->
     </div>
 </div>
