--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -1,2 +1,78 @@
+<div class="row">
+    <div class="col-xs-12">
+        <form [formGroup]="recipeForm" (ngSubmit)="onSubmit()">
+            <div class="row">
+                <div class="col-xs-12">
+                    <button class="btn-success" type="submit">Save</button>
+                    <button class="btn-danger" type="button">Cancel</button>
+                </div>
+            </div>
 
-<h3>Recipe New or Edit</h3>
+            <!-- The input name of image -->
+            <div class="row">
+                <div class="col-xs-12">
+                    <div class="form-group">
+                        <label for="name">Name</label>
+                        <input type="text"
+                        id="name"
+                        formControlName="name"
+                        class="form-control">
+                    </div>
+                </div>
+            </div>
+
+            <!-- The input image path of image-->
+            <div class="row">
+                <div class="col-xs-12">
+                    <div class="form-group">
+                        <label for="imagePath">ImagePath</label>
+                        <input type="text"
+                        id="imagePath"
+                        formControlName="imagePath"
+                        class="form-control">
+                    </div>
+                </div>
+            </div>
+
+            <!-- Preview the image-->
+            <div class="row">
+                <div class="col-xs-12">
+                    <img src="" class="img-responsive">
+                </div>
+            </div>
+
+            <!-- Description -->
+            <div class="row">
+                <div class="col-xs-12">
+                    <div class="form-group">
+                        <label for="description"></label>
+                        <textarea name="description" 
+                        id="description" 
+                        formControlName="description"
+                        class="form-control"
+                        cols="30" 
+                        rows="10">
+                        </textarea>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-xs-12" formArrayName="ingredients">
+                    <div class="row" *ngFor="let ingredient of recipeIngredients.controls; let i = index"
+                    [formGroupName]="i">
+                        <div class="col-xs-8">
+                            <input type="text" class="form-control" formControlName="name">
+                        </div>
+                        <div class="col-xs-2">
+                            <input type="number" class="form-control" formControlName="amount">
+                        </div>
+                        <div class="col-xs-2">
+                            <button class="btn btn-danger">X</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </form>
+    </div>
+</div>
