Adding new ingredient control with FormArray

--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -60,7 +60,8 @@
             <div class="row">
                 <div class="col-xs-12" formArrayName="ingredients">
                     <div class="row" *ngFor="let ingredient of recipeIngredients.controls; let i = index"
-                    [formGroupName]="i">
+                    [formGroupName]="i"
+                    style="margin-top: 10px;">
                         <div class="col-xs-8">
                             <input type="text" class="form-control" formControlName="name">
                         </div>
@@ -69,6 +70,16 @@
                         </div>
                         <div class="col-xs-2">
                             <button class="btn btn-danger">X</button>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-xs-12">
+                            <button
+                            type="button" 
+                            class="btn btn-success" 
+                            (click)="onAddIngredients()">
+                                Add New Ingredient
+                            </button>
                         </div>
                     </div>
                 </div>
