Add validation in form control

--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -3,7 +3,10 @@
         <form [formGroup]="recipeForm" (ngSubmit)="onSubmit()">
             <div class="row">
                 <div class="col-xs-12">
-                    <button class="btn-success" type="submit">Save</button>
+                    <button
+                    [disabled]="!recipeForm.valid" 
+                    class="btn-success" 
+                    type="submit">Save</button>
                     <button class="btn-danger" type="button">Cancel</button>
                 </div>
             </div>
