Submitting Recipe form, addition, deletion and image preview

--- a/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
+++ b/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
@@ -3,15 +3,13 @@ style="cursor: pointer;"
 [routerLink]="[index]"
 routerLinkActive="active"
  class="list-group-item clearfix"
-[ngStyle]="{borderColor: recipieItem.id !=0 && recipieItem.id === selected ? 'red' : 'black'}"
 >
     <div class="pull-left">
         <h4 class="list-group-item-heading">{{recipieItem.name}}</h4>
         <p class="list-group-item-text">{{recipieItem.description}}</p>
     </div>
     <span class="pull-right">
-        <img [src]="recipieItem.imagepath" alt="" 
+        <img [src]="recipieItem.imagePath" alt="" 
         class="img-responsive" style="max-height: 50px;">
     </span>
 </a>
-<button class="btn btn-danger" (click)="ondeleteItem()">Delete</button>
