--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -18,7 +18,7 @@
             <ul class="dropdown-menu">
                 <li><a (click)="onAddToShoppingList()" style="cursor: pointer;">To Shopping list</a></li>
                 <li><a (click)="onEditRecipe()" style="cursor: pointer;">Edit Recipe</a></li>
-                <li><a href="#">Delete Recipe</a></li>
+                <li><a (click)="onDeleteRecipe()" style="cursor: pointer;">Delete Recipe</a></li>
             </ul>
         </div>
     </div>
