--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -3,11 +3,12 @@
         <form [formGroup]="recipeForm" (ngSubmit)="onSubmit()">
             <div class="row">
                 <div class="col-xs-12">
-                    <button
-                    [disabled]="!recipeForm.valid" 
+                    <button 
                     class="btn-success" 
-                    type="submit">Save</button>
-                    <button class="btn-danger" type="button">Cancel</button>
+                    type="submit"
+                    [disabled]="!recipeForm.valid"
+                    >Save</button>
+                    <button class="btn-danger" type="button" (click)="onCancelRecipeForm()">Cancel</button>
                 </div>
             </div>
 
@@ -32,7 +33,8 @@
                         <input type="text"
                         id="imagePath"
                         formControlName="imagePath"
-                        class="form-control">
+                        class="form-control"
+                        #imagePath>
                     </div>
                 </div>
             </div>
@@ -40,7 +42,7 @@
             <!-- Preview the image-->
             <div class="row">
                 <div class="col-xs-12">
-                    <img src="" class="img-responsive">
+                    <img [src]="imagePath.value" class="img-responsive">
                 </div>
             </div>
 
