Deleting Form Array an add unscribe when component destroyed in recipe-list component

--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -30,7 +30,7 @@
 </div>
 <div class="row">
     <div class="col-xs-12">
-        <img [src]="recipeDetail.imagepath" alt="" 
+        <img [src]="recipeDetail.imagePath" alt="" 
         class="img-responsive" style="max-height: 50px;">
     </div>
 </div>
